--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -1,18 +1,17 @@
 \documentclass{beamer}
-\usetheme{default}
+\usetheme{CambridgeUS}
 \usepackage[utf8]{inputenc}
 \usepackage[T2A]{fontenc}
 \usepackage[russian]{babel}
 \usepackage{listings}
 \usepackage{xcolor}
-
-
+\setbeamercolor{item}{fg=red}
 
 \lstset{
-	basicstyle=\ttfamily\small,
-	keywordstyle=\color{blue},
+	  basicstyle=\bfseries\ttfamily,
+	keywordstyle=\bfseries\color{blue},
 	commentstyle=\color{gray},
-	stringstyle=\color{orange},
+	stringstyle=\color{red},
 	backgroundcolor=\color{white},
 	frame=single,
 	rulecolor=\color{black},
@@ -44,16 +43,22 @@
 	\end{frame}
 	
 	\begin{frame}
+		\frametitle{Актуальность}
+		\begin{itemize}
+			\item TODO
+		\end{itemize}
+	\end{frame}
+	
+	\begin{frame}
 		\frametitle{Цель}
 		Создание AOT-компилятора вымышленного императивного языка, способного компилировать относительно несложные программы 
 	\end{frame}
 	
 	\begin{frame}
 		\frametitle{Задачи}
-		
 		\begin{itemize}
 			\item Изучение процесса компиляции в современных ЯП
-			\item ???Выбор языка и подготовка окружения
+			\item Подготовка окружения
 			\item Реализация фронтенда
 			\begin{itemize}
 				\item Лексический анализ
@@ -69,16 +74,46 @@
 	\end{frame}
 	
 	\begin{frame}
+		\frametitle{Обзор аналогов}
+		Clang:
+		\begin{itemize}
+			\item TODO??
+		\end{itemize}
+		GCC:
+		\begin{itemize}
+			\item TODO??
+		\end{itemize}
+		
+	\end{frame}
+	
+		\begin{frame}
+		\frametitle{О компилируемом языке}
+		\begin{itemize}
+			\item Инструкции верхнего уровня
+			\item Базовые императивные конструкции
+			\begin{itemize}
+				\item Объявления и присваивания
+				\item Циклы
+				\item Ветвления
+				\item Вызов процедур
+			\end{itemize}
+			\item Поддержка типов и областей видимости
+			\item Pascal-like синтаксис
+		\end{itemize}
+	\end{frame}
+	
+	\begin{frame}
 		\frametitle{О процессе компиляции}
 		
 			\begin{itemize}
 			\item Каждый этап обрабатывается отдельным модулем
 			\item Модуль принимает некоторое представление программы и возвращает новое представление, снабженное дополнительной информацией
-			\item ???Компиляция представляет собой процесс последовательной передачи результатов вычислений предыдущего модуля в следующий модуль
+			\item Компиляция представляет собой процесс последовательной передачи результатов вычислений предыдущего модуля в следующий модуль
 			\end{itemize}
 
 	\end{frame}
 	
+
 	\begin{frame}[fragile]
 		\frametitle{Лексический анализ}
 			Задачи:
@@ -89,9 +124,8 @@
 			Сигнатура функции:
 
 			\begin{lstlisting}[language=ML] 
-val tokenize :
-		string -> (token list, lexer_error) result
-		\end{lstlisting}
+			val tokenize : string -> token list
+			\end{lstlisting}
 
 			В качестве токенов могут выступать:
 			\begin{itemize}
@@ -117,14 +151,17 @@ val tokenize :
 		\end{itemize}
 		Сигнатура функции:	
 		\begin{lstlisting}[language=ML] 
-val parse_to_program :
-		token list -> (program, parser_error) result
+		val build_ast : token list -> ast
 		\end{lstlisting}
+		Детали реализации:
+		\begin{itemize}
+			\item Разбор выражений с помощью рекурсивного спуска
+			\item ???
+		\end{itemize}
 		\end{frame}
 	
 	\begin{frame}[fragile]
-		
-		Что из себя представляет AST:
+		\frametitle{AST}
 		\begin{lstlisting}[language=ML] 
 type program = statement list
 
@@ -150,10 +187,8 @@ type expression =
 			\item Выявить семантические ошибки
 		\end{itemize}
 				
-		Сигнатура функции:	
 		\begin{lstlisting}[language=ML] 
-val infer_types :
-		token list -> (program, parser_error) result
+		val annotate_ast : ast -> annotated_ast
 		\end{lstlisting}
 		
 		Поддерживаемые на данный момент типы:
@@ -165,7 +200,7 @@ val infer_types :
 
 		\end{frame}
 	\begin{frame}[fragile]
-		Как выглядит расширенное AST:
+			\frametitle{Annotated AST}
 
 \begin{lstlisting}[language=ML] 
 type typed_program = (typed_statement * scope) list
@@ -185,17 +220,26 @@ type typed_expression =
 
 		\end{frame}
 
-\begin{frame}
+\begin{frame}[fragile]
 	\frametitle{Порождение кода}
-	Полученное ранее представление программы является универсальным для любой платформы для которой существует компилятор OCaml подходящей версии.
+	Задача — Преобразование AST в язык Ассемблера
 	\\
-	Порождение кода реализовано для riscv64.
+	Сигнатура функции:
+	\begin{lstlisting}[language=ML] 
+	val generate_assembly : annotated_ast -> string
+	\end{lstlisting}
 	
+	\begin{itemize}
+		\item AST универсально для любой платформы для которой существует компилятор OCaml подходящей версии
+		\item Порождение кода реализовано только для riscv64
+	\end{itemize}
 \end{frame}
 
 
 \begin{frame}
 	\frametitle{???}
+	Результат работы компилятора — код на языке Ассемблера
+	Дальнейшие этапы:
 	\begin{itemize}
 		\item Ассемблирование
 		\begin{itemize}
@@ -218,15 +262,21 @@ type typed_expression =
 \begin{frame}
 	\frametitle{Использовавшиеся инструменты}
 		\begin{itemize}
-			\item \lstinline[language=ML]|ppx_expect| и \lstinline[language=ML]|ppx_deriving|
+			\item \lstinline[language=ML]|ppx_expect|,  \lstinline[language=ML]|ppx_deriving|
 			\begin{itemize}
 				\item Специфичные для OCaml фреймворки значительно упрощающие тестирование и отладку
 			\end{itemize}
 			
-			\item \lstinline[language=ML]|riscv64-unknown-elf-as| и \lstinline[language=ML]|riscv64-unknown-elf-ld|
-			\item \lstinline[language=ML]|qemu-riscv64| и \lstinline[language=ML]|spike|
-			
+			\item \lstinline[language=ML]|riscv64-unknown-elf-as|,  \lstinline[language=ML]|riscv64-unknown-elf-ld|
+			\item \lstinline[language=ML]|qemu-riscv64|, \lstinline[language=ML]|spike|
 		\end{itemize}
 \end{frame}
-
+	\begin{frame}
+	\frametitle{Перспективы развития}
+	\begin{itemize}
+		\item Добавление препроцессинга
+		\item Добавление оптимизаций
+		\item Расширение системы типов
+	\end{itemize}
+\end{frame}
 \end{document}
